eliminated warnings all over README.md, ListMap.java, and 5 more files...